Bundling non-modular application with OpenJFX dependencies included in module runtime image. (good news for cryptomator/cryptomator#769)